[gd_scene load_steps=6 format=3 uid="uid://chs1eo2pyc17n"]

[ext_resource type="PackedScene" uid="uid://b67qspn68qjff" path="res://scenes/levels/level.tscn" id="1_nfcpk"]
[ext_resource type="Script" path="res://scenes/levels/set1/easy_lvl_3.gd" id="2_ghap3"]
[ext_resource type="PackedScene" uid="uid://ckvx0sllba6aw" path="res://scenes/objects/red_door.tscn" id="3_rnlt0"]
[ext_resource type="PackedScene" uid="uid://bv7xkckdjm1wa" path="res://scenes/objects/blue_door.tscn" id="4_0nwgn"]
[ext_resource type="PackedScene" uid="uid://bys8bnmxu0j68" path="res://scenes/objects/exit_door.tscn" id="5_0fcgi"]

[node name="EasyLvl3" instance=ExtResource("1_nfcpk")]
script = ExtResource("2_ghap3")

[node name="TileMap" parent="." index="1"]
layer_0/tile_data = PackedInt32Array(-65536, 131072, 2, -1245184, 65536, 0, -1245151, 65536, 1, -65503, 327680, 0, -1179648, 131072, 0, -1114112, 131072, 0, -1048576, 131072, 0, -983040, 131072, 0, -917504, 131072, 0, -851968, 131072, 0, -786432, 131072, 0, -720896, 131072, 0, -655360, 131072, 0, -589824, 131072, 0, -524288, 131072, 0, -458752, 131072, 0, -393216, 131072, 0, -327680, 131072, 0, -262144, 131072, 0, -196608, 131072, 0, -131072, 131072, 0, -1245183, 0, 6, -1245182, 0, 6, -1245181, 0, 6, -1245180, 0, 6, -1245179, 0, 6, -1245178, 0, 6, -1245177, 0, 6, -1245176, 0, 6, -1245175, 0, 6, -1245174, 0, 6, -1245173, 0, 6, -1245172, 0, 6, -1245171, 0, 6, -1245170, 0, 6, -1245169, 0, 6, -1245168, 0, 6, -1245167, 0, 6, -1245166, 0, 6, -1245165, 0, 6, -1245164, 0, 6, -1245163, 0, 6, -1245162, 0, 6, -1245161, 0, 6, -1245160, 0, 6, -1245159, 0, 6, -1245158, 0, 6, -1245157, 0, 6, -1245156, 0, 6, -1245155, 0, 6, -1245154, 0, 6, -1245153, 0, 6, -1245152, 0, 6, -1179615, 131072, 1, -1114079, 131072, 1, -1048543, 131072, 1, -983007, 131072, 1, -917471, 131072, 1, -851935, 131072, 1, -786399, 131072, 1, -720863, 131072, 1, -655327, 131072, 1, -589791, 131072, 1, -524255, 131072, 1, -458719, 131072, 1, -393183, 131072, 1, -327647, 131072, 1, -262111, 131072, 1, -196575, 131072, 1, -131039, 131072, 1, -65535, 262144, 3, -65534, 262144, 3, -65533, 262144, 3, -65532, 262144, 3, -65531, 262144, 3, -65530, 262144, 3, -65529, 262144, 3, -65528, 262144, 3, -65527, 262144, 3, -65526, 262144, 3, -65525, 262144, 3, -65524, 262144, 3, -65523, 262144, 3, -65522, 262144, 3, -65521, 262144, 3, -65520, 262144, 3, -65519, 262144, 3, -65518, 262144, 3, -65517, 262144, 3, -65516, 262144, 3, -65515, 262144, 3, -65514, 262144, 3, -65513, 262144, 3, -65512, 262144, 3, -65511, 262144, 3, -65510, 262144, 3, -65509, 262144, 3, -65508, 262144, 3, -65507, 262144, 3, -65506, 262144, 3, -65505, 262144, 3, -65504, 262144, 3, -1310720, 0, 5, -1310719, 0, 5, -1310718, 0, 5, -1310717, 0, 5, -1310716, 0, 5, -1310714, 0, 5, -1310713, 0, 5, -1310712, 0, 5, -1310711, 0, 5, -1310710, 0, 5, -1310709, 0, 5, -1310708, 0, 5, -1310707, 0, 5, -1310706, 0, 5, -1310705, 0, 5, -1310704, 0, 5, -1310703, 0, 5, -1310702, 0, 5, -1310701, 0, 5, -1310700, 0, 5, -1310699, 0, 5, -1310698, 0, 5, -1310697, 0, 5, -1310696, 0, 5, -1310695, 0, 5, -1310694, 0, 5, -1310693, 0, 5, -1310692, 0, 5, -1310691, 0, 5, -1310690, 0, 5, -1310689, 0, 5, -1310688, 0, 5, -1310687, 0, 5, -1310715, 0, 5, -1310686, 0, 5, -1245150, 0, 5, -1179614, 0, 5, -1114078, 0, 5, -1048542, 0, 5, -983006, 0, 5, -917470, 0, 5, -851934, 0, 5, -786398, 0, 5, -720862, 0, 5, -655326, 0, 5, -589790, 0, 5, -524254, 0, 5, -458718, 0, 5, -393182, 0, 5, -327646, 0, 5, -262110, 0, 5, -196574, 0, 5, -131038, 0, 5, -65502, 0, 5, 0, 0, 5, 1, 0, 5, 2, 0, 5, 3, 0, 5, 4, 0, 5, 5, 0, 5, 6, 0, 5, 7, 0, 5, 8, 0, 5, 9, 0, 5, 10, 0, 5, 11, 0, 5, 12, 0, 5, 13, 0, 5, 14, 0, 5, 15, 0, 5, 16, 0, 5, 17, 0, 5, 18, 0, 5, 19, 0, 5, 20, 0, 5, 21, 0, 5, 22, 0, 5, 23, 0, 5, 24, 0, 5, 25, 0, 5, 26, 0, 5, 27, 0, 5, 28, 0, 5, 29, 0, 5, 30, 0, 5, 31, 0, 5, 32, 0, 5, 33, 0, 5, 34, 0, 5, -1245185, 0, 5, -1179649, 0, 5, -1114113, 0, 5, -1048577, 0, 5, -983041, 0, 5, -917505, 0, 5, -851969, 0, 5, -786433, 0, 5, -720897, 0, 5, -655361, 0, 5, -589825, 0, 5, -524289, 0, 5, -458753, 0, 5, -393217, 0, 5, -327681, 0, 5, -262145, 0, 5, -196609, 0, 5, -131073, 0, 5, -65537, 0, 5, -1, 0, 5, 65535, 0, 5, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131040, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 131072, 5, -131044, 131072, 4, -131049, 1, 0, -393190, 131072, 5, -393189, 262144, 3, -393188, 131072, 4, -393185, 131072, 5, -393184, 131072, 4, -327654, 65536, 3, -327653, 262144, 536870915, -327652, 65536, 2, -327649, 65536, 3, -327648, 65536, 2, -262135, 196608, 5, -262134, 262144, 3, -262133, 262144, 3, -262132, 262144, 3, -262131, 196608, 4, -917502, 196608, 5, -917501, 262144, 3, -917500, 262144, 3, -917499, 262144, 3, -917477, 196608, 5, -917476, 262144, 3, -917475, 262144, 3, -917474, 262144, 3, -393200, 196608, 5, -393199, 262144, 3, -393198, 262144, 3, -393197, 262144, 3, -458732, 1, 0, -393196, 196608, 4, -458733, 1, 0, -589811, 262144, 4, -589810, 262144, 2, -786417, 262144, 4, -786414, 262144, 2, -786416, 262144, 3, -786415, 262144, 3, -851950, 1, 0, -851951, 1, 0, -458726, 1, 0, -917473, 262144, 3, -917472, 262144, 3, -917495, 131072, 5, -917494, 262144, 3, -917493, 262144, 3, -917498, 131072, 4, -1114100, 65536, 2, -1179636, 131072, 0, -1114101, 0, 6, -1114102, 0, 6, -1179638, 0, 5, -1179637, 0, 5, -1048565, 1, 536870912, -917491, 196608, 4, -917492, 262144, 3, -851961, 262144, 3, -851960, 262144, 3, -851959, 327680, 0, -851962, 131072, 2, -917497, 1, 0, -917496, 1, 0, -1114105, 65536, 3, -1114104, 0, 6, -1114103, 0, 6, -1179639, 0, 5, -1179640, 0, 5, -1179641, 131072, 1, -1048566, 1, 536870912, -131057, 1, 0, -131058, 1, 0)

[node name="RedDoor" parent="Objects" index="0" instance=ExtResource("3_rnlt0")]
position = Vector2(2162, -1053)

[node name="BlueDoor" parent="Objects" index="1" instance=ExtResource("4_0nwgn")]
position = Vector2(307, -1053)

[node name="ExitDoor" parent="Objects" index="2" instance=ExtResource("5_0fcgi")]
position = Vector2(2097, -125)

[connection signal="playerTouched" from="Objects/RedDoor" to="." method="_on_red_door_player_touched"]
[connection signal="playerTouched" from="Objects/BlueDoor" to="." method="_on_blue_door_player_touched"]
[connection signal="playerTouched" from="Objects/ExitDoor" to="." method="_on_exit_door_player_touched"]
